# fortran_kmeans

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  run.f90
.github/workflows/: build.yml
cmake/: kmeans.pc.in  kmeans.pc.in_cristian  kmeans.pc.in_legacy  kmeansConfig.cmake.in
jupyter/: .gitignore  kmeans.ipynb
src/: CMakeLists.txt  grids_m.f90  kmeans_m.f90  maths_m.f90  mpi_m.F90  utils_m.f90
tests/: test_grids_m.f90  test_kmeans_m.f90  test_mpi_m.F90  test_utils_m.f90
